<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Activity.Rules">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/black"
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/log"
            android:gravity="left"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:id="@+id/imgback"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trading Rules"
                    android:textColor="@color/white"
                    android:layout_toRightOf="@+id/imgback"
                    android:layout_marginLeft="@dimen/login05"
                    android:textSize="@dimen/forget_01"
                    android:fontFamily="@font/sebino_regular"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules1"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules2"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules3"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules4"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules5"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules6"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules7"
        android:padding="10dp"
        android:textSize="14sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:textColorHint="@color/black"
        android:drawableLeft="@drawable/tick"
        android:drawablePadding="10dp"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/rules8"
        android:padding="10dp"
        android:textSize="14sp" /><EditText
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:clickable="false"
    android:textColorHint="@color/black"
    android:drawableLeft="@drawable/tick"
    android:drawablePadding="10dp"
    android:editable="false"
    android:focusable="false"
    android:hint="@string/rules10"
    android:padding="15dp"
    android:textSize="14sp" />

        <TextView
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="No confusion should be there."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="Trade only according to levels. "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
        android:text="If levels missed from your side, don't take that position. "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:padding="10dp"
        android:textSize="16sp"
        android:text="For any confusion ping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <EditText
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/emoji"
            android:drawablePadding="10dp"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/rules11"
            android:padding="15dp"
            android:textSize="16sp" />


        <TextView
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    </ScrollView>
</LinearLayout>