<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/reg"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">



    <LinearLayout
        android:background="@color/reg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="Login"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




        <RelativeLayout
            android:layout_marginTop="80dp"
            android:background="@drawable/regdesign"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <EditText
                android:background="@null"
                android:paddingLeft="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:background="@drawable/regdesign"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <EditText
                android:paddingLeft="20dp"
                android:layout_centerInParent="true"
                android:background="@null"

                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </RelativeLayout>

        <!-- Login Button -->

        <Button
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/golden"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>