<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/reg"
    android:layout_height="match_parent"

    tools:context=".Activity.RegisterActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/reg"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="Register"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="80dp"
            android:background="@drawable/regdesign"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <EditText
                android:paddingLeft="20dp"
                android:textColorHint="@color/white"
                android:layout_centerInParent="true"
                android:background="@null"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:background="@drawable/regdesign"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <EditText
                android:paddingLeft="20dp"
                android:layout_centerInParent="true"
                android:textColorHint="@color/white"
                 android:background="@null"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/golden"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>